--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,9 +9,9 @@
   author={Grosshans, Fr\'ed\'eric and Horodecki, Micha{\l} and Murao, Mio and M{\l}ynik, Tomasz and Quintino, Marco T\'ulio and Studzi\'nski, Micha{\l} and Yoshida, Satoshi},
   year={2024},
   arxiv={2409.10393},
-  abstract={This work considers a teleportation task for Alice and Bob in a scenario where Bob cannot perform corrections.  In particular, we analyse the task of \textit{multicopy state teleportation}, where Alice has $k$ identical copies of an arbitrary unknown $d$-dimensional qudit state $\ket{\psi}$ to teleport a single copy of $\ket{\psi}$ to Bob using a maximally entangled two-qudit state shared between Alice and Bob without Bob's correction. Alice may perform a joint measurement on her half of the entangled state and the $k$ copies of $\ket{\psi}$.
-We prove that the maximal probability of success for teleporting the exact state $\ket{\psi}$ to Bob is $p(d,k)=\frac{k}{d(k-1+d)}$ and present an explicit protocol to attain this performance.
-Then, by utilising $k$ copies of an arbitrary target state $\ket{\psi}$, we show how the multicopy state teleportation protocol can be employed to enhance the success probability of storage and retrieval of quantum programs, which aims to universally retrieve the action of an arbitrary quantum channel that is stored in a state.
+  abstract={This work considers a teleportation task for Alice and Bob in a scenario where Bob cannot perform corrections.  In particular, we analyse the task of multicopy state teleportation, where Alice has $k$ identical copies of an arbitrary unknown $d$-dimensional qudit state $\vert \psi \rangle$ to teleport a single copy of $\vert \psi \rangle$ to Bob using a maximally entangled two-qudit state shared between Alice and Bob without Bob's correction. Alice may perform a joint measurement on her half of the entangled state and the $k$ copies of $\vert \psi \rangle$.
+We prove that the maximal probability of success for teleporting the exact state $\vert\psi\rangle$ to Bob is $p(d,k)=k/[d(k-1+d)]$ and present an explicit protocol to attain this performance.
+Then, by utilising $k$ copies of an arbitrary target state $\vert\psi\rangle$, we show how the multicopy state teleportation protocol can be employed to enhance the success probability of storage and retrieval of quantum programs, which aims to universally retrieve the action of an arbitrary quantum channel that is stored in a state.
 Our proofs make use of group representation theory methods, which may find applications beyond the problems addressed in this work.},
 }
 
