--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,28 @@
 ---
 ---
 
+@article{hler2024exponential,
+  abbr={arXiv},
+  selected={false},
+  bibtex_show={true},
+  title={{Exponential separation in quantum query complexity of the quantum switch with respect to simulations with standard quantum circuits}},
+  author={Kristj\'ansson, Hl\'er and Odake, Tatsuki and Yoshida, Satoshi and Taranto, Philip and Bavaresco, Jessica and Quintino, Marco T\'ulio and Murao, Mio},
+  year={2024},
+  arxiv={2409.18420},
+  abstract={Quantum theory is consistent with a computational model permitting black-box operations to be applied in an indefinite causal order, going beyond the standard circuit model of computation. The quantum switch -- the simplest such example -- has been shown to provide numerous information-processing advantages. Here, we prove that the action of the quantum switch on two $n$-qubit quantum channels cannot be simulated deterministically and exactly by any causally ordered quantum circuit that uses $M$ calls to one channel and one call to the other, if $M\leq \max(2, 2^n-1)$. This demonstrates an exponential enhancement in quantum query complexity provided by indefinite causal order.},
+}
+
+@article{bavaresco2024can,
+  abbr={arXiv},
+  selected={false},
+  bibtex_show={true},
+  title={{Can the quantum switch be deterministically simulated?}},
+  author={Bavaresco, Jessica and Yoshida, Satoshi and Odake, Tatsuki and Kristj\'ansson, Hl\'er and Taranto, Philip and Murao, Mio and Quintino, Marco T\'ulio},
+  year={2024},
+  arxiv={2409.18202},
+  abstract={Higher-order transformations that act on a certain number of input quantum channels in an indefinite causal order - such as the quantum switch - cannot be described by standard quantum circuits that use the same number of calls of the input quantum channels. However, the question remains whether they can be simulated, i.e., whether their action on their input channels can be deterministically reproduced, for all arbitrary inputs, by a quantum circuit that uses a larger number of calls of the input channels. Here, we prove that when only one extra call of each input channel is available, the quantum switch cannot be simulated by any quantum circuit. We demonstrate that this result is robust by showing that, even when probabilistic and approximate simulations are considered, higher-order transformations that are close to the quantum switch can be at best simulated with a probability strictly less than one. This result stands in stark contrast with the known fact that, when the quantum switch acts exclusively on unitary channels, its action can be simulated.},
+}
+
 @article{frederic2024multicopy,
   abbr={arXiv},
   selected={false},
