--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -6,7 +6,7 @@
   selected={false},
   bibtex_show={true},
   title={{Exponential separation in quantum query complexity of the quantum switch with respect to simulations with standard quantum circuits}},
-  author={Kristj\'ansson, Hl\'er and Odake, Tatsuki and Yoshida, Satoshi and Taranto, Philip and Bavaresco, Jessica and Quintino, Marco T\'ulio and Murao, Mio},
+  author={Kristj\'ansson*, Hl\'er and Odake*, Tatsuki and Yoshida*, Satoshi and Taranto, Philip and Bavaresco, Jessica and Quintino, Marco T\'ulio and Murao, Mio},
   year={2024},
   arxiv={2409.18420},
   abstract={Quantum theory is consistent with a computational model permitting black-box operations to be applied in an indefinite causal order, going beyond the standard circuit model of computation. The quantum switch -- the simplest such example -- has been shown to provide numerous information-processing advantages. Here, we prove that the action of the quantum switch on two $n$-qubit quantum channels cannot be simulated deterministically and exactly by any causally ordered quantum circuit that uses $M$ calls to one channel and one call to the other, if $M\leq \max(2, 2^n-1)$. This demonstrates an exponential enhancement in quantum query complexity provided by indefinite causal order.},
