--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,7 +3,7 @@
 
 @article{hler2024exponential,
   abbr={arXiv},
-  selected={false},
+  selected={true},
   bibtex_show={true},
   title={{Exponential separation in quantum query complexity of the quantum switch with respect to simulations with standard quantum circuits}},
   author={Kristj\'ansson*, Hl\'er and Odake*, Tatsuki and Yoshida*, Satoshi and Taranto, Philip and Bavaresco, Jessica and Quintino, Marco T\'ulio and Murao, Mio},
