--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -46,7 +46,7 @@ Our proofs make use of group representation theory methods, which may find appli
   year={2024},
   arxiv={2408.11902},
   abstract={Port-based teleportation is a variant of quantum teleportation, where the receiver can choose one of the ports in his part of the entangled state shared with the sender, but cannot apply other recovery operations. We show that the optimal fidelity of deterministic port-based teleportation (dPBT) using $N=n+1$ ports to teleport a $d$-dimensional state is equivalent to the optimal fidelity of $d$-dimensional unitary estimation using $n$ calls of the input unitary operation. From any given dPBT, we can explicitly construct the corresponding unitary estimation protocol achieving the same optimal fidelity, and vice versa. Using the obtained one-to-one correspondence between dPBT and unitary estimation, we derive the asymptotic optimal fidelity of port-based teleportation given by $F = 1-\Theta(d^4 N^{-2})$, which improves the previously known result given by $1-O(d^5 N^{-2}) \leq F \leq 1-\Omega(d^2 N^{-2})$. We also show that the optimal fidelity of unitary estimation for the case $n\leq d-1$ is $F = {n+1 \over d^2}$, and this fidelity is equal to the optimal fidelity of unitary inversion with $n\leq d-1$ calls of the input unitary operation even if we allow indefinite causal order among the calls.},
-  slide={qip2025_pbt_estimation.pdf}
+  slide={qip2025_pbt_estimation.pdf},
 }
 
 @article{odake2024analytical,
@@ -58,7 +58,7 @@ Our proofs make use of group representation theory methods, which may find appli
   year={2024},
   arxiv={2405.07625},
   abstract={Recent developments have revealed deterministic and exact protocols for performing complex conjugation, inversion, and transposition of a general $d$-dimensional unknown unitary operation using a finite number of queries to a black-box unitary operation. In this work, we establish analytical lower bounds for the query complexity of unitary inversion, transposition, and complex conjugation. Specifically, our lower bound of $d^2$ for unitary inversion demonstrates the asymptotic optimality of the deterministic exact inversion protocol, which operates with $O(d^2)$ queries. We introduce a novel framework utilizing differentiation to derive these lower bounds on query complexity for general differentiable functions $f: \mathrm{SU}(d)\to \mathrm{SU}(d)$. As a corollary, we prove that a catalytic protocol -- a new concept recently noted in the study of exact unitary inversion -- is impossible for unitary complex conjugation. Furthermore, we extend our framework to the probabilistic setting, where transformations must succeed with a certain probability, revealing a potential trade-off between the number of queries and the required success probability.},
-  slide={qip2025_lower_bound.pdf}
+  slide={qip2025_lower_bound.pdf},
 }
 
 @article{yoshida2024concatenate,
