--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -75,7 +75,7 @@ Our proofs make use of group representation theory methods, which may find appli
 
 @article{yoshida2024universal,
   abbr={arXiv},
-  selected={false},
+  selected={true},
   bibtex_show={true},
   title={{Universal adjointation of isometry operations using transformation of quantum supermaps}},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
