--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -77,7 +77,7 @@ Our proofs make use of group representation theory methods, which may find appli
   abbr={Quantum},
   selected={true},
   bibtex_show={true},
-  title={{Universal adjointation of isometry operations using transformation of quantum supermaps}},
+  title={{Universal adjointation of isometry operations using conversion of quantum supermaps}},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
   journal={Quantum},
   volume={9},
