--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -69,7 +69,7 @@ Our proofs make use of group representation theory methods, which may find appli
   title={{Concatenate codes, save qubits}},
   author={Yoshida, Satoshi and Tamiya, Shiro and Yamasaki, Hayata},
   arxiv={2402.09606},
-  journal={npj Quantum Information},
+  journal={npj Quantum Inf.},
   volume={11},
   pages={88},
   year={2025},
