--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,17 @@
 ---
 ---
 
+@article{yoshida2025quantum,
+  abbr={arXiv},
+  selected={false},
+  bibtex_show={true},
+  title={{Quantum Advantage in Storage and Retrieval of Isometry Channels}},
+  author={Yoshida, Satoshi and Miyazaki, Jisho and Murao, Mio},
+  year={2025},
+  arxiv={2507.10784},
+  abstract={Storage and retrieval refer to the task of encoding a quantum channel $\Lambda$ into a quantum state, known as the program state, such that the channel can later be retrieved. This task is closely related to quantum channel estimation, where multiple queries to $\Lambda$ are used to prepare a quantum state $\phi_\Lambda$ that encodes information about the channel. The channel can then be retrieved by measuring $\phi_\Lambda$, following a measure-and-prepare strategy. In this work, we analyze the asymptotic performance of the estimation-based strategy for storage and retrieval of isometry channels. We show that the optimal fidelity for isometry estimation is given by $F = 1-{d(D-d)\over n} + O(n^{-2})$, where $d$ and $D$ denote the input and output dimensions of the isometry, and $n$ is the number of queries. This result indicates that, unlike in the case of unitary channels, the estimation-based strategy is suboptimal for the storage and retrieval of isometry channels, which requires $n = \Theta(\epsilon^{-1})$ to achieve the diamond-norm error $\epsilon$. To address this limitation, we propose a more efficient protocol based on port-based teleportation, which stores the isometry channel in a program state using only $n = \Theta(1/\sqrt{\epsilon})$ queries. As an application, we extend our approach to general quantum channels, achieving improved program cost compared to prior results by Gschwedtner, Bluhm, and Winter [Quantum $\textbf{5}$, 488 (2021)].}
+}
+
 @article{hler2024exponential,
   abbr={arXiv},
   selected={true},
