--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -4,7 +4,7 @@
 @article{yoshida2025quantum,
   abbr={arXiv},
   selected={false},
-  bibtex_show={true},
+  bibtex_show={false},
   title={{Quantum Advantage in Storage and Retrieval of Isometry Channels}},
   author={Yoshida, Satoshi and Miyazaki, Jisho and Murao, Mio},
   year={2025},
@@ -15,7 +15,7 @@
 @article{hler2024exponential,
   abbr={arXiv},
   selected={true},
-  bibtex_show={true},
+  bibtex_show={false},
   title={{Exponential separation in quantum query complexity of the quantum switch with respect to simulations with standard quantum circuits}},
   author={Kristj\'ansson*, Hl\'er and Odake*, Tatsuki and Yoshida*, Satoshi and Taranto, Philip and Bavaresco, Jessica and Quintino, Marco T\'ulio and Murao, Mio},
   year={2024},
@@ -27,7 +27,7 @@
 @article{bavaresco2024can,
   abbr={arXiv},
   selected={false},
-  bibtex_show={true},
+  bibtex_show={false},
   title={{Can the quantum switch be deterministically simulated?}},
   author={Bavaresco, Jessica and Yoshida, Satoshi and Odake, Tatsuki and Kristj\'ansson, Hl\'er and Taranto, Philip and Murao, Mio and Quintino, Marco T\'ulio},
   year={2024},
@@ -38,7 +38,7 @@
 @article{frederic2024multicopy,
   abbr={arXiv},
   selected={false},
-  bibtex_show={true},
+  bibtex_show={false},
   title={{Multicopy quantum state teleportation with application to storage and retrieval of quantum programs}},
   author={Grosshans, Fr\'ed\'eric and Horodecki, Micha{\l} and Murao, Mio and M{\l}ynik, Tomasz and Quintino, Marco T\'ulio and Studzi\'nski, Micha{\l} and Yoshida, Satoshi},
   year={2024},
@@ -52,7 +52,7 @@ Our proofs make use of group representation theory methods, which may find appli
 @article{yoshida2024one,
   abbr={arXiv},
   selected={true},
-  bibtex_show={true},
+  bibtex_show={false},
   title={{One-to-one Correspondence between Deterministic Port-Based Teleportation and Unitary Estimation}},
   author={Yoshida, Satoshi and Koizumi, Yuki and Studzi\'nski, Micha{\l} and Quintino, Marco T\'ulio and Murao, Mio},
   year={2024},
@@ -64,7 +64,7 @@ Our proofs make use of group representation theory methods, which may find appli
 @article{odake2024analytical,
   abbr={arXiv},
   selected={false},
-  bibtex_show={true},
+  bibtex_show={false},
   title={{Analytical lower bound on query complexity for transformations of unknown unitary operations}},
   author={Odake, Tatsuki and Yoshida, Satoshi and Murao, Mio},
   year={2024},
@@ -76,7 +76,7 @@ Our proofs make use of group representation theory methods, which may find appli
 @article{yoshida2025concatenate,
   abbr={npj Quantum Inf.},
   selected={true},
-  bibtex_show={true},
+  bibtex_show={false},
   title={{Concatenate codes, save qubits}},
   author={Yoshida, Satoshi and Tamiya, Shiro and Yamasaki, Hayata},
   arxiv={2402.09606},
@@ -91,7 +91,7 @@ Our proofs make use of group representation theory methods, which may find appli
 @article{yoshida2025universal,
   abbr={Quantum},
   selected={true},
-  bibtex_show={true},
+  bibtex_show={false},
   title={{Universal adjointation of isometry operations using conversion of quantum supermaps}},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
   journal={Quantum},
@@ -107,7 +107,7 @@ Our proofs make use of group representation theory methods, which may find appli
 @article{yoshida2023reversing,
   abbr={Phys. Rev. Lett.},
   selected={true},
-  bibtex_show={true},
+  bibtex_show={false},
   title={{Reversing Unknown Qubit-Unitary Operation, Deterministically and Exactly}},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
   journal={Phys. Rev. Lett.},
@@ -124,7 +124,7 @@ inversion protocol for an arbitrary dimension presented by M. T. Quintino and D.
 @article{yoshida2023universal,
   abbr={Quantum},
   selected={false},
-  bibtex_show={true},
+  bibtex_show={false},
   title={Universal construction of decoders from encoding black boxes},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
   journal={Quantum},
@@ -140,7 +140,7 @@ inversion protocol for an arbitrary dimension presented by M. T. Quintino and D.
 @article{yoshida2022thermodynamic,
   abbr={Phys. Rev. Res.},
   selected={false},
-  bibtex_show={true},
+  bibtex_show={false},
   title={Thermodynamic role of main reaction pathway and multi-body information flow in membrane transport},
   author={Yoshida, Satoshi and Okada, Yasushi and Muneyuki, Eiro and Ito, Sosuke},
   journal={Phys. Rev. Res.},
