--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+@article{yoshida2025asymptotically,
+  abbr={arXiv},
+  selected={false},
+  title={{Asymptotically optimal unitary estimation in SU(3) by the analysis of graph Laplacian}},
+  author={Yoshida, Satoshi and Yoshida, Hironobu and Murao, Mio},
+  year={2025},
+  arxiv={2509.20608},
+}
+
 @article{yoshida2025quantum,
   abbr={arXiv},
   selected={false},
@@ -12,7 +21,7 @@
 
 @article{hler2024exponential,
   abbr={arXiv},
-  selected={true},
+  selected={false},
   title={{Exponential separation in quantum query complexity of the quantum switch with respect to simulations with standard quantum circuits}},
   author={Kristj\'ansson*, Hl\'er and Odake*, Tatsuki and Yoshida*, Satoshi and Taranto, Philip and Bavaresco, Jessica and Quintino, Marco T\'ulio and Murao, Mio},
   year={2024},
