--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+@article{grinko2025quantum,
+  abbr={arXiv},
+  selected={true},
+  title={{Quantum Simulation of Random Unitaries from Clebsch-Gordan Transforms}},
+  author={Grinko, Dmitry and Yoshida, Satoshi},
+  year={2025},
+  arxiv={2509.26623},
+}
+
 @article{yoshida2025asymptotically,
   abbr={arXiv},
   selected={false},
