--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,11 +1,21 @@
 ---
 ---
 
+@article{yoshida2025low,
+  abbr={arXiv},
+  selected={false},
+  title={{Low Depth Color Code Circuits with CXSWAP gate}},
+  author={Yoshida, Satoshi and Gidney, Craig and McEwen, Matt and Zalcman, Adam},
+  year={2025},
+  arxiv={2510.00370}
+},
+}
+
 @article{grinko2025quantum,
   abbr={arXiv},
   selected={true},
   title={{Quantum Simulation of Random Unitaries from Clebsch-Gordan Transforms}},
-  author={Grinko, Dmitry and Yoshida, Satoshi},
+  author={Grinko*, Dmitry and Yoshida*, Satoshi},
   year={2025},
   arxiv={2509.26623},
 }
