--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+@article{grinko2025sequential,
+  abbr={arXiv},
+  selected={true},
+  title={{Sequential quantum processes with group symmetries}},
+  author={Grinko*, Dmitry and Yoshida*, Satoshi and Murao, Mio and Ozols, Maris},
+  year={2025},
+  arxiv={2510.07100}
+}
+
 @article{yoshida2025low,
   abbr={arXiv},
   selected={false},
@@ -8,7 +17,6 @@
   author={Yoshida, Satoshi and Gidney, Craig and McEwen, Matt and Zalcman, Adam},
   year={2025},
   arxiv={2510.00370}
-},
 }
 
 @article{grinko2025quantum,
