--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -21,7 +21,7 @@
 
 @article{grinko2025quantum,
   abbr={arXiv},
-  selected={true},
+  selected={false},
   title={{Quantum Simulation of Random Unitaries from Clebsch-Gordan Transforms}},
   author={Grinko*, Dmitry and Yoshida*, Satoshi},
   year={2025},
@@ -76,7 +76,7 @@
 
 @article{yoshida2024one,
   abbr={arXiv},
-  selected={true},
+  selected={false},
   title={{One-to-one Correspondence between Deterministic Port-Based Teleportation and Unitary Estimation}},
   author={Yoshida, Satoshi and Koizumi, Yuki and Studzi\'nski, Micha{\l} and Quintino, Marco T\'ulio and Murao, Mio},
   year={2024},
@@ -109,7 +109,7 @@
 
 @article{yoshida2025universal,
   abbr={Quantum},
-  selected={true},
+  selected={false},
   title={{Universal adjointation of isometry operations using conversion of quantum supermaps}},
   author={Yoshida, Satoshi and Soeda, Akihito and Murao, Mio},
   journal={Quantum},
