--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+@article{brzic2025higher,
+  abbr={arXiv},
+  selected={false},
+  title={Higher-order quantum computing with known input states},
+  author={Brzi\'c, Vanessa and Yoshida, Satoshi and Murao, Mio and Quintino, Marco T\'ulio},
+  year={2025},
+  arxiv={2510.07100}
+}
+
 @article{grinko2025sequential,
   abbr={arXiv},
   selected={true},
