--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -54,24 +54,14 @@
   year={2025},
   arxiv={2507.10784},
 }
-
-@article{hler2024exponential,
-  abbr={arXiv},
+@article{bavaresco2025simulating,
+  abbr={Nat. Commun.},
   selected={false},
-  title={{Exponential separation in quantum query complexity of the quantum switch with respect to simulations with standard quantum circuits}},
-  author={Kristj\'ansson*, Hl\'er and Odake*, Tatsuki and Yoshida*, Satoshi and Taranto, Philip and Bavaresco, Jessica and Quintino, Marco T\'ulio and Murao, Mio},
-  year={2024},
-  arxiv={2409.18420},
+  title={{Simulating the quantum switch with quantum circuits is computationally hard}},
+  author={Bavaresco, Jessica and Kristj\'ansson, Hl\'er and Murao, Mio and Odake, Tatsuki and Taranto, Philip and Quintino, Marco T\'ulio and Yoshida, Satoshi},
+  note={Accepted in Nat. Commun. (old versions: arXiv:2409.18202, arXiv:2409.18420)},
+  year={2025},
   slide={aqis2024_switch_simulation.pdf},
-}
-
-@article{bavaresco2024can,
-  abbr={arXiv},
-  selected={false},
-  title={{Can the quantum switch be deterministically simulated?}},
-  author={Bavaresco, Jessica and Yoshida, Satoshi and Odake, Tatsuki and Kristj\'ansson, Hl\'er and Taranto, Philip and Murao, Mio and Quintino, Marco T\'ulio},
-  year={2024},
-  arxiv={2409.18202},
 }
 
 @article{frederic2024multicopy,
@@ -93,12 +83,13 @@
   slide={qip2025_pbt_estimation.pdf},
 }
 
-@article{odake2024analytical,
-  abbr={arXiv},
+@article{odake2025analytical,
+  abbr={Phys. Rev. Lett.},
   selected={false},
-  title={{Analytical lower bound on query complexity for transformations of unknown unitary operations}},
+  title={{Analytical Lower Bound on Query Complexity for Transformations of Unknown Unitary Operations}},
   author={Odake, Tatsuki and Yoshida, Satoshi and Murao, Mio},
-  year={2024},
+  year={2025},
+  note={Accepted in Phys. Rev. Lett.},
   arxiv={2405.07625},
   slide={qip2025_lower_bound.pdf},
 }
