--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -59,8 +59,11 @@
   selected={false},
   title={{Simulating the quantum switch with quantum circuits is computationally hard}},
   author={Bavaresco, Jessica and Kristj\'ansson, Hl\'er and Murao, Mio and Odake, Tatsuki and Taranto, Philip and Quintino, Marco T\'ulio and Yoshida, Satoshi},
-  note={Accepted in Nat. Commun. (old versions: arXiv:2409.18202, arXiv:2409.18420)},
+  journal={Nat. Commun.},
+  volume={16},
+  pages={10216},
   year={2025},
+  doi={10.1038/s41467-025-64996-6},
   slide={aqis2024_switch_simulation.pdf},
 }
 
