--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -92,8 +92,12 @@
   title={{Analytical Lower Bound on Query Complexity for Transformations of Unknown Unitary Operations}},
   author={Odake, Tatsuki and Yoshida, Satoshi and Murao, Mio},
   year={2025},
-  note={Accepted in Phys. Rev. Lett.},
+  journal={Phys. Rev. Lett.},
+  volume={135},
+  pages={230603},
+  year={2023},
   arxiv={2405.07625},
+  doi={10.1103/drp2-rzzw},
   slide={qip2025_lower_bound.pdf},
 }
 
