--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -64,6 +64,7 @@
   pages={10216},
   year={2025},
   doi={10.1038/s41467-025-64996-6},
+  arxiv={2409.18202},
   slide={aqis2024_switch_simulation.pdf},
 }
 
