--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -56,7 +56,7 @@
 }
 @article{bavaresco2025simulating,
   abbr={Nat. Commun.},
-  selected={false},
+  selected={true},
   title={{Simulating the quantum switch with quantum circuits is computationally hard}},
   author={Bavaresco, Jessica and Kristj\'ansson, Hl\'er and Murao, Mio and Odake, Tatsuki and Taranto, Philip and Quintino, Marco T\'ulio and Yoshida, Satoshi},
   journal={Nat. Commun.},
