--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,15 @@
 ---
 ---
 
+@article{yoshida2025random,
+  abbr={arXiv},
+  selected={false},
+  title={Random dilation superchannel},
+  author={Yoshida, Satoshi and Niwa, Ryotaro and Murao, Mio},
+  year={2025},
+  arxiv={2512.21260}
+}
+
 @article{brzic2025higher,
   abbr={arXiv},
   selected={false},
