--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -86,13 +86,14 @@
   arxiv={2409.10393},
 }
 
-@article{yoshida2024one,
-  abbr={arXiv},
+@article{yoshida2026one,
+  abbr={IEEE Trans. Inf. Theory},
   selected={false},
-  title={{One-to-one Correspondence between Deterministic Port-Based Teleportation and Unitary Estimation}},
+  title={{One-to-One Correspondence between Deterministic Port-Based Teleportation and Unitary Estimation}},
   author={Yoshida, Satoshi and Koizumi, Yuki and Studzi\'nski, Micha{\l} and Quintino, Marco T\'ulio and Murao, Mio},
-  year={2024},
-  arxiv={2408.11902},
+  note={Accepted in IEEE Trans. Inf. Theory},
+  doi={10.1109/TIT.2026.3658543},
+  year={2026},
   slide={qip2025_pbt_estimation.pdf},
 }
 
