--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,6 +1,18 @@
 ---
 ---
 
+@article{yoshida2026one,
+  abbr={IEEE Trans. Inf. Theory},
+  selected={false},
+  title={{One-to-One Correspondence between Deterministic Port-Based Teleportation and Unitary Estimation}},
+  author={Yoshida, Satoshi and Koizumi, Yuki and Studzi\'nski, Micha{\l} and Quintino, Marco T\'ulio and Murao, Mio},
+  note={Accepted in IEEE Trans. Inf. Theory},
+  doi={10.1109/TIT.2026.3658543},
+  year={2026},
+  arxiv={2408.11902},
+  slide={qip2025_pbt_estimation.pdf},
+}
+
 @article{yoshida2025random,
   abbr={arXiv},
   selected={false},
@@ -84,17 +96,6 @@
   author={Grosshans, Fr\'ed\'eric and Horodecki, Micha{\l} and Murao, Mio and M{\l}ynik, Tomasz and Quintino, Marco T\'ulio and Studzi\'nski, Micha{\l} and Yoshida, Satoshi},
   year={2024},
   arxiv={2409.10393},
-}
-
-@article{yoshida2026one,
-  abbr={IEEE Trans. Inf. Theory},
-  selected={false},
-  title={{One-to-One Correspondence between Deterministic Port-Based Teleportation and Unitary Estimation}},
-  author={Yoshida, Satoshi and Koizumi, Yuki and Studzi\'nski, Micha{\l} and Quintino, Marco T\'ulio and Murao, Mio},
-  note={Accepted in IEEE Trans. Inf. Theory},
-  doi={10.1109/TIT.2026.3658543},
-  year={2026},
-  slide={qip2025_pbt_estimation.pdf},
 }
 
 @article{odake2025analytical,
